translator/wh/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program line
Rule 2     program -> line
Rule 3     program -> error
Rule 4     lineend -> SEMICOLON
Rule 5     lineend -> lineend SEMICOLON
Rule 6     lineend -> NEWLINE
Rule 7     lineend -> lineend NEWLINE
Rule 8     line -> lineend
Rule 9     line -> ID COLON statement lineend
Rule 10    line -> ID COLON_EQUALS statement lineend
Rule 11    line -> statement lineend
Rule 12    line -> dstatement lineend
Rule 13    line -> AUTOFILTER lineend
Rule 14    line -> BACKGROUNDSTYLE LPAREN NUMBER RPAREN lineend
Rule 15    statement -> statement COMMA OFUNC
Rule 16    statement -> statement COMMA color
Rule 17    statement -> statement COMMA LINESTYLE
Rule 18    statement -> statement COMMA LINEWIDTH
Rule 19    statement -> expression
Rule 20    color -> COLOR
Rule 21    color -> RGB LPAREN NUMBER COMMA NUMBER COMMA NUMBER RPAREN
Rule 22    line -> statement COMMA ORDER lineend
Rule 23    line -> statement COMMA ORDER LPAREN expression RPAREN lineend
Rule 24    expression -> LPAREN expression RPAREN
Rule 25    expression -> color
Rule 26    expression -> expression PLUS expression
Rule 27    expression -> expression MINUS expression
Rule 28    expression -> expression TIMES expression
Rule 29    expression -> expression DIVIDE expression
Rule 30    expression -> expression LT expression
Rule 31    expression -> expression LTE expression
Rule 32    expression -> expression GT expression
Rule 33    expression -> expression GTE expression
Rule 34    expression -> expression AND expression
Rule 35    expression -> expression OR expression
Rule 36    expression -> expression EQUALS expression
Rule 37    expression -> expression NOT_EQUALS expression
Rule 38    expression -> MINUS expression
Rule 39    expression -> NUMBER
Rule 40    expression -> STRING
Rule 41    expression -> ID
Rule 42    expression -> ID LPAREN RPAREN
Rule 43    expression -> ID LPAREN expression RPAREN
Rule 44    expression -> ID LPAREN expression COMMA expression RPAREN
Rule 45    expression -> ID LPAREN expression COMMA expression COMMA expression RPAREN
Rule 46    expression -> ID LPAREN expression COMMA expression COMMA expression COMMA expression RPAREN
Rule 47    expression -> ID LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
Rule 48    expression -> ID LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
Rule 49    expression -> ID LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
Rule 50    dstatement -> DRAWFUNC
Rule 51    dstatement -> DRAWFUNC LPAREN RPAREN
Rule 52    dstatement -> DRAWFUNC LPAREN expression RPAREN
Rule 53    dstatement -> DRAWFUNC LPAREN expression COMMA expression RPAREN
Rule 54    dstatement -> DRAWFUNC LPAREN expression COMMA expression COMMA expression RPAREN
Rule 55    dstatement -> DRAWFUNC LPAREN expression COMMA expression COMMA expression COMMA expression RPAREN
Rule 56    dstatement -> DRAWFUNC LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
Rule 57    dstatement -> DRAWFUNC LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
Rule 58    dstatement -> DRAWFUNC LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
Rule 59    dstatement -> dstatement COMMA color
Rule 60    dstatement -> dstatement COMMA LINEWIDTH
Rule 61    dstatement -> dstatement COMMA ALIGN
Rule 62    dstatement -> dstatement COMMA LINESTYLE
Rule 63    dstatement -> dstatement COMMA FONTSIZE

Terminals, with rules where they appear

ALIGN                : 61
AND                  : 34
AUTOFILTER           : 13
BACKGROUNDSTYLE      : 14
COLON                : 9
COLON_EQUALS         : 10
COLOR                : 20
COMMA                : 15 16 17 18 21 21 22 23 44 45 45 46 46 46 47 47 47 47 48 48 48 48 48 49 49 49 49 49 49 53 54 54 55 55 55 56 56 56 56 57 57 57 57 57 58 58 58 58 58 58 59 60 61 62 63
DIVIDE               : 29
DRAWFUNC             : 50 51 52 53 54 55 56 57 58
EQUALS               : 36
FONTSIZE             : 63
GT                   : 32
GTE                  : 33
ID                   : 9 10 41 42 43 44 45 46 47 48 49
LINESTYLE            : 17 62
LINEWIDTH            : 18 60
LPAREN               : 14 21 23 24 42 43 44 45 46 47 48 49 51 52 53 54 55 56 57 58
LT                   : 30
LTE                  : 31
MINUS                : 27 38
NEWLINE              : 6 7
NOT_EQUALS           : 37
NUMBER               : 14 21 21 21 39
OFUNC                : 15
OR                   : 35
ORDER                : 22 23
PLUS                 : 26
RGB                  : 21
RPAREN               : 14 21 23 24 42 43 44 45 46 47 48 49 51 52 53 54 55 56 57 58
SEMICOLON            : 4 5
STRING               : 40
TIMES                : 28
error                : 3

Nonterminals, with rules where they appear

color                : 16 25 59
dstatement           : 12 59 60 61 62 63
expression           : 19 23 24 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 43 44 44 45 45 45 46 46 46 46 47 47 47 47 47 48 48 48 48 48 48 49 49 49 49 49 49 49 52 53 53 54 54 54 55 55 55 55 56 56 56 56 56 57 57 57 57 57 57 58 58 58 58 58 58 58
line                 : 1 2
lineend              : 5 7 8 9 10 11 12 13 14 22 23
program              : 1 0
statement            : 9 10 11 15 16 17 18 22 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program line
    (2) program -> . line
    (3) program -> . error
    (8) line -> . lineend
    (9) line -> . ID COLON statement lineend
    (10) line -> . ID COLON_EQUALS statement lineend
    (11) line -> . statement lineend
    (12) line -> . dstatement lineend
    (13) line -> . AUTOFILTER lineend
    (14) line -> . BACKGROUNDSTYLE LPAREN NUMBER RPAREN lineend
    (22) line -> . statement COMMA ORDER lineend
    (23) line -> . statement COMMA ORDER LPAREN expression RPAREN lineend
    (4) lineend -> . SEMICOLON
    (5) lineend -> . lineend SEMICOLON
    (6) lineend -> . NEWLINE
    (7) lineend -> . lineend NEWLINE
    (15) statement -> . statement COMMA OFUNC
    (16) statement -> . statement COMMA color
    (17) statement -> . statement COMMA LINESTYLE
    (18) statement -> . statement COMMA LINEWIDTH
    (19) statement -> . expression
    (50) dstatement -> . DRAWFUNC
    (51) dstatement -> . DRAWFUNC LPAREN RPAREN
    (52) dstatement -> . DRAWFUNC LPAREN expression RPAREN
    (53) dstatement -> . DRAWFUNC LPAREN expression COMMA expression RPAREN
    (54) dstatement -> . DRAWFUNC LPAREN expression COMMA expression COMMA expression RPAREN
    (55) dstatement -> . DRAWFUNC LPAREN expression COMMA expression COMMA expression COMMA expression RPAREN
    (56) dstatement -> . DRAWFUNC LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
    (57) dstatement -> . DRAWFUNC LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
    (58) dstatement -> . DRAWFUNC LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
    (59) dstatement -> . dstatement COMMA color
    (60) dstatement -> . dstatement COMMA LINEWIDTH
    (61) dstatement -> . dstatement COMMA ALIGN
    (62) dstatement -> . dstatement COMMA LINESTYLE
    (63) dstatement -> . dstatement COMMA FONTSIZE
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . color
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . expression LT expression
    (31) expression -> . expression LTE expression
    (32) expression -> . expression GT expression
    (33) expression -> . expression GTE expression
    (34) expression -> . expression AND expression
    (35) expression -> . expression OR expression
    (36) expression -> . expression EQUALS expression
    (37) expression -> . expression NOT_EQUALS expression
    (38) expression -> . MINUS expression
    (39) expression -> . NUMBER
    (40) expression -> . STRING
    (41) expression -> . ID
    (42) expression -> . ID LPAREN RPAREN
    (43) expression -> . ID LPAREN expression RPAREN
    (44) expression -> . ID LPAREN expression COMMA expression RPAREN
    (45) expression -> . ID LPAREN expression COMMA expression COMMA expression RPAREN
    (46) expression -> . ID LPAREN expression COMMA expression COMMA expression COMMA expression RPAREN
    (47) expression -> . ID LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
    (48) expression -> . ID LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
    (49) expression -> . ID LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
    (20) color -> . COLOR
    (21) color -> . RGB LPAREN NUMBER COMMA NUMBER COMMA NUMBER RPAREN

    error           shift and go to state 3
    ID              shift and go to state 5
    AUTOFILTER      shift and go to state 8
    BACKGROUNDSTYLE shift and go to state 9
    SEMICOLON       shift and go to state 13
    NEWLINE         shift and go to state 14
    DRAWFUNC        shift and go to state 16
    LPAREN          shift and go to state 10
    MINUS           shift and go to state 17
    NUMBER          shift and go to state 11
    STRING          shift and go to state 18
    COLOR           shift and go to state 19
    RGB             shift and go to state 20

    program                        shift and go to state 1
    line                           shift and go to state 2
    lineend                        shift and go to state 4
    statement                      shift and go to state 6
    dstatement                     shift and go to state 7
    expression                     shift and go to state 12
    color                          shift and go to state 15

state 1

    (0) S' -> program .
    (1) program -> program . line
    (8) line -> . lineend
    (9) line -> . ID COLON statement lineend
    (10) line -> . ID COLON_EQUALS statement lineend
    (11) line -> . statement lineend
    (12) line -> . dstatement lineend
    (13) line -> . AUTOFILTER lineend
    (14) line -> . BACKGROUNDSTYLE LPAREN NUMBER RPAREN lineend
    (22) line -> . statement COMMA ORDER lineend
    (23) line -> . statement COMMA ORDER LPAREN expression RPAREN lineend
    (4) lineend -> . SEMICOLON
    (5) lineend -> . lineend SEMICOLON
    (6) lineend -> . NEWLINE
    (7) lineend -> . lineend NEWLINE
    (15) statement -> . statement COMMA OFUNC
    (16) statement -> . statement COMMA color
    (17) statement -> . statement COMMA LINESTYLE
    (18) statement -> . statement COMMA LINEWIDTH
    (19) statement -> . expression
    (50) dstatement -> . DRAWFUNC
    (51) dstatement -> . DRAWFUNC LPAREN RPAREN
    (52) dstatement -> . DRAWFUNC LPAREN expression RPAREN
    (53) dstatement -> . DRAWFUNC LPAREN expression COMMA expression RPAREN
    (54) dstatement -> . DRAWFUNC LPAREN expression COMMA expression COMMA expression RPAREN
    (55) dstatement -> . DRAWFUNC LPAREN expression COMMA expression COMMA expression COMMA expression RPAREN
    (56) dstatement -> . DRAWFUNC LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
    (57) dstatement -> . DRAWFUNC LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
    (58) dstatement -> . DRAWFUNC LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
    (59) dstatement -> . dstatement COMMA color
    (60) dstatement -> . dstatement COMMA LINEWIDTH
    (61) dstatement -> . dstatement COMMA ALIGN
    (62) dstatement -> . dstatement COMMA LINESTYLE
    (63) dstatement -> . dstatement COMMA FONTSIZE
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . color
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . expression LT expression
    (31) expression -> . expression LTE expression
    (32) expression -> . expression GT expression
    (33) expression -> . expression GTE expression
    (34) expression -> . expression AND expression
    (35) expression -> . expression OR expression
    (36) expression -> . expression EQUALS expression
    (37) expression -> . expression NOT_EQUALS expression
    (38) expression -> . MINUS expression
    (39) expression -> . NUMBER
    (40) expression -> . STRING
    (41) expression -> . ID
    (42) expression -> . ID LPAREN RPAREN
    (43) expression -> . ID LPAREN expression RPAREN
    (44) expression -> . ID LPAREN expression COMMA expression RPAREN
    (45) expression -> . ID LPAREN expression COMMA expression COMMA expression RPAREN
    (46) expression -> . ID LPAREN expression COMMA expression COMMA expression COMMA expression RPAREN
    (47) expression -> . ID LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
    (48) expression -> . ID LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
    (49) expression -> . ID LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
    (20) color -> . COLOR
    (21) color -> . RGB LPAREN NUMBER COMMA NUMBER COMMA NUMBER RPAREN

    ID              shift and go to state 5
    AUTOFILTER      shift and go to state 8
    BACKGROUNDSTYLE shift and go to state 9
    SEMICOLON       shift and go to state 13
    NEWLINE         shift and go to state 14
    DRAWFUNC        shift and go to state 16
    LPAREN          shift and go to state 10
    MINUS           shift and go to state 17
    NUMBER          shift and go to state 11
    STRING          shift and go to state 18
    COLOR           shift and go to state 19
    RGB             shift and go to state 20

    line                           shift and go to state 21
    lineend                        shift and go to state 4
    statement                      shift and go to state 6
    dstatement                     shift and go to state 7
    expression                     shift and go to state 12
    color                          shift and go to state 15

state 2

    (2) program -> line .

    ID              reduce using rule 2 (program -> line .)
    AUTOFILTER      reduce using rule 2 (program -> line .)
    BACKGROUNDSTYLE reduce using rule 2 (program -> line .)
    SEMICOLON       reduce using rule 2 (program -> line .)
    NEWLINE         reduce using rule 2 (program -> line .)
    DRAWFUNC        reduce using rule 2 (program -> line .)
    LPAREN          reduce using rule 2 (program -> line .)
    MINUS           reduce using rule 2 (program -> line .)
    NUMBER          reduce using rule 2 (program -> line .)
    STRING          reduce using rule 2 (program -> line .)
    COLOR           reduce using rule 2 (program -> line .)
    RGB             reduce using rule 2 (program -> line .)
    $end            reduce using rule 2 (program -> line .)


state 3

    (3) program -> error .

    ID              reduce using rule 3 (program -> error .)
    AUTOFILTER      reduce using rule 3 (program -> error .)
    BACKGROUNDSTYLE reduce using rule 3 (program -> error .)
    SEMICOLON       reduce using rule 3 (program -> error .)
    NEWLINE         reduce using rule 3 (program -> error .)
    DRAWFUNC        reduce using rule 3 (program -> error .)
    LPAREN          reduce using rule 3 (program -> error .)
    MINUS           reduce using rule 3 (program -> error .)
    NUMBER          reduce using rule 3 (program -> error .)
    STRING          reduce using rule 3 (program -> error .)
    COLOR           reduce using rule 3 (program -> error .)
    RGB             reduce using rule 3 (program -> error .)
    $end            reduce using rule 3 (program -> error .)


state 4

    (8) line -> lineend .
    (5) lineend -> lineend . SEMICOLON
    (7) lineend -> lineend . NEWLINE

  ! shift/reduce conflict for SEMICOLON resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
    ID              reduce using rule 8 (line -> lineend .)
    AUTOFILTER      reduce using rule 8 (line -> lineend .)
    BACKGROUNDSTYLE reduce using rule 8 (line -> lineend .)
    DRAWFUNC        reduce using rule 8 (line -> lineend .)
    LPAREN          reduce using rule 8 (line -> lineend .)
    MINUS           reduce using rule 8 (line -> lineend .)
    NUMBER          reduce using rule 8 (line -> lineend .)
    STRING          reduce using rule 8 (line -> lineend .)
    COLOR           reduce using rule 8 (line -> lineend .)
    RGB             reduce using rule 8 (line -> lineend .)
    $end            reduce using rule 8 (line -> lineend .)
    SEMICOLON       shift and go to state 22
    NEWLINE         shift and go to state 23

  ! SEMICOLON       [ reduce using rule 8 (line -> lineend .) ]
  ! NEWLINE         [ reduce using rule 8 (line -> lineend .) ]


state 5

    (9) line -> ID . COLON statement lineend
    (10) line -> ID . COLON_EQUALS statement lineend
    (41) expression -> ID .
    (42) expression -> ID . LPAREN RPAREN
    (43) expression -> ID . LPAREN expression RPAREN
    (44) expression -> ID . LPAREN expression COMMA expression RPAREN
    (45) expression -> ID . LPAREN expression COMMA expression COMMA expression RPAREN
    (46) expression -> ID . LPAREN expression COMMA expression COMMA expression COMMA expression RPAREN
    (47) expression -> ID . LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
    (48) expression -> ID . LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
    (49) expression -> ID . LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN

    COLON           shift and go to state 24
    COLON_EQUALS    shift and go to state 25
    PLUS            reduce using rule 41 (expression -> ID .)
    MINUS           reduce using rule 41 (expression -> ID .)
    TIMES           reduce using rule 41 (expression -> ID .)
    DIVIDE          reduce using rule 41 (expression -> ID .)
    LT              reduce using rule 41 (expression -> ID .)
    LTE             reduce using rule 41 (expression -> ID .)
    GT              reduce using rule 41 (expression -> ID .)
    GTE             reduce using rule 41 (expression -> ID .)
    AND             reduce using rule 41 (expression -> ID .)
    OR              reduce using rule 41 (expression -> ID .)
    EQUALS          reduce using rule 41 (expression -> ID .)
    NOT_EQUALS      reduce using rule 41 (expression -> ID .)
    COMMA           reduce using rule 41 (expression -> ID .)
    SEMICOLON       reduce using rule 41 (expression -> ID .)
    NEWLINE         reduce using rule 41 (expression -> ID .)
    LPAREN          shift and go to state 26


state 6

    (11) line -> statement . lineend
    (22) line -> statement . COMMA ORDER lineend
    (23) line -> statement . COMMA ORDER LPAREN expression RPAREN lineend
    (15) statement -> statement . COMMA OFUNC
    (16) statement -> statement . COMMA color
    (17) statement -> statement . COMMA LINESTYLE
    (18) statement -> statement . COMMA LINEWIDTH
    (4) lineend -> . SEMICOLON
    (5) lineend -> . lineend SEMICOLON
    (6) lineend -> . NEWLINE
    (7) lineend -> . lineend NEWLINE

    COMMA           shift and go to state 28
    SEMICOLON       shift and go to state 13
    NEWLINE         shift and go to state 14

    lineend                        shift and go to state 27

state 7

    (12) line -> dstatement . lineend
    (59) dstatement -> dstatement . COMMA color
    (60) dstatement -> dstatement . COMMA LINEWIDTH
    (61) dstatement -> dstatement . COMMA ALIGN
    (62) dstatement -> dstatement . COMMA LINESTYLE
    (63) dstatement -> dstatement . COMMA FONTSIZE
    (4) lineend -> . SEMICOLON
    (5) lineend -> . lineend SEMICOLON
    (6) lineend -> . NEWLINE
    (7) lineend -> . lineend NEWLINE

    COMMA           shift and go to state 30
    SEMICOLON       shift and go to state 13
    NEWLINE         shift and go to state 14

    lineend                        shift and go to state 29

state 8

    (13) line -> AUTOFILTER . lineend
    (4) lineend -> . SEMICOLON
    (5) lineend -> . lineend SEMICOLON
    (6) lineend -> . NEWLINE
    (7) lineend -> . lineend NEWLINE

    SEMICOLON       shift and go to state 13
    NEWLINE         shift and go to state 14

    lineend                        shift and go to state 31

state 9

    (14) line -> BACKGROUNDSTYLE . LPAREN NUMBER RPAREN lineend

    LPAREN          shift and go to state 32


state 10

    (24) expression -> LPAREN . expression RPAREN
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . color
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . expression LT expression
    (31) expression -> . expression LTE expression
    (32) expression -> . expression GT expression
    (33) expression -> . expression GTE expression
    (34) expression -> . expression AND expression
    (35) expression -> . expression OR expression
    (36) expression -> . expression EQUALS expression
    (37) expression -> . expression NOT_EQUALS expression
    (38) expression -> . MINUS expression
    (39) expression -> . NUMBER
    (40) expression -> . STRING
    (41) expression -> . ID
    (42) expression -> . ID LPAREN RPAREN
    (43) expression -> . ID LPAREN expression RPAREN
    (44) expression -> . ID LPAREN expression COMMA expression RPAREN
    (45) expression -> . ID LPAREN expression COMMA expression COMMA expression RPAREN
    (46) expression -> . ID LPAREN expression COMMA expression COMMA expression COMMA expression RPAREN
    (47) expression -> . ID LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
    (48) expression -> . ID LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
    (49) expression -> . ID LPAREN expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression COMMA expression RPAREN
    (20) color -> . COLOR
    (21) color -> . RGB LPAREN NUMBER COMMA NUMBER COMMA NUMBER RPAREN

    LPAREN          shift and go to state 10
    MINUS           shift and go to state 17
    NUMBER          shift and go to state 11
    STRING          shift and go to state 18
    ID              shift and go to state 34
    COLOR           shift and go to state 19
    RGB             shift and go to state 20

    expression                     shift and go to state 33
    color                          shift and go to state 15

state 11

    (39) expression -> NUMBER .
